<resources>
    <string name="app_name">狐聊</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_app">狐聊</string>
    
    <!-- 系统中的异常信息 -->
    <string name="exception_not_phone_number">抱歉，这不是一个合格的手机号码</string>
    <string name="exception_sms_content_empty">抱歉，您还没有输入短信的内容噢</string>
    <string name="exception_not_found_phone_number">抱歉，没有找到可用的电话号码</string>
    <string name="exception_not_found_sms">抱歉，没有找到短消息</string>
    
    <!-- 系统中的提示信息 -->
    <string name="tip_loading">加载中...</string>
    <string name="tip_sms_sending">信息发送中..</string>
    <string name="tip_sms_send_success">信息发送成功</string>
    <string name="tip_sms_send_failed">信息发送失败</string>
    <string name="tip_sms_content_copy_success">信息内容已经复制到剪切板</string>
    <string name="tip_sms_content_copy_failed">信息内容复制失败</string>
    <string name="tip_sms_delete_success">短信删除成功</string>
    <string name="tip_sms_delete_failed">短信删除失败</string>
    
    <!-- 主菜单 -->
    <string name="app_menu_title">主菜单</string>
    <string name="app_menu_exit">退出程序</string>
    <string name="app_menu_setting">设置</string>
    
    <!-- sms_header部分 -->
    <string name="img_logo_alt">图片</string>
    
    <!-- sms_footer部分 -->
    <string name="sms_write_sms">写信息</string>
    <string name="sms_list">短信列表</string>
    
    <!-- sms_contactor_list部分 -->
    <string name="sms_contactor_photo">用户的头像</string>
    <string name="sms_contactor_arrow">更多</string>
    
    <!-- sms_detail部分 -->
    <string name="sms_detail_msg_content_hint">请输入信息内容</string>
    <string name="sms_detail_msg_send">发送</string>
    <string name="sms_detail_msg_repeat">回复</string>
    <string name="sms_detail_msg_read">已读</string>
    <string name="sms_default_append_words">[我是被甩过来的]</string>
    <string name="sms_detail_menu_tile">信息选项</string>
    <string name="sms_detail_menu_delete">删除信息</string>
    <string name="sms_detail_menu_transmit">转发信息</string>
    <string name="sms_detail_menu_copy">复制内容</string>
    <string name="sms_detail_menu_detail">信息详情</string>
    <string name="sms_detail_transmit_tip">转发：</string>
    <string name="sms_detail_title">我和%1$s的短信列表</string>
    
    <!-- sms_write部分 -->
    <string name="sms_write_title">写信息</string>
    <string name="sms_write_receiver_name">收信人</string>
    <string name="sms_write_receiver_hint">请输入联系人的电话</string>
    <string name="sms_write_content">信息正文</string>
    <string name="sms_write_content_hint">请输入短信的正文</string>
    
    <!-- sms_write_select_sender部分 -->
    <string name="sms_write_select_sender_title">选择联系人</string>
    <string name="sms_write_select_sender_search_hint">共有%1$s位联系人，点此搜索</string>
    <string name="sms_write_select_record_history">通话记录</string>
    <string name="sms_write_select_contacter">联系人</string>
    <string name="sms_write_select_group">群发</string>
</resources>